@@ -3,7 +3,7 @@
 /***************************************************************
  * Extension Manager/Repository config file for ext "powermail".
  *
- * Auto generated 13-12-2012 11:39
+ * Auto generated 24-01-2013 10:38
  *
  * Manual updates:
  * Only the data in the array - everything else is removed by next
@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Powerful and easy to use mailform extension with many features like storing form datas in database, export them to HTML, CSV and EXCEL (last one needs extension phpexcel_library), javascript validation (jQuery), multi step forms, different HTML templates, IRRE (Inline Relationship Record Editing), static_info_tables and many more...',
 	'category' => 'plugin',
 	'shy' => 0,
-	'version' => '1.7.0',
+	'version' => '1.7.0-20130124',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
@@ -42,7 +42,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:186:{s:9:"ChangeLog";s:4:"3a62";s:20:"class.ext_update.php";s:4:"c1f5";s:16:"ext_autoload.php";s:4:"6e2a";s:21:"ext_conf_template.txt";s:4:"be65";s:12:"ext_icon.gif";s:4:"be45";s:17:"ext_localconf.php";s:4:"2fe7";s:14:"ext_tables.php";s:4:"252b";s:14:"ext_tables.sql";s:4:"71b5";s:13:"locallang.xml";s:4:"19d0";s:16:"locallang_db.xml";s:4:"b3c6";s:16:"pageTSconfig.txt";s:4:"8983";s:12:"t3jquery.txt";s:4:"f3b4";s:7:"tca.php";s:4:"808d";s:46:"classes/interfaces/interface.PM_ExportHook.php";s:4:"25c0";s:36:"cli/class.tx_powermail_scheduler.php";s:4:"3db8";s:46:"cli/class.tx_powermail_scheduler_addFields.php";s:4:"9121";s:12:"cli/conf.php";s:4:"e1ca";s:15:"cli/cronjob.php";s:4:"9854";s:14:"doc/manual.sxw";s:4:"867b";s:53:"doc/database_relation/powermail_database_relation.gif";s:4:"20e9";s:19:"doc/hook/hooks.html";s:4:"0b4b";s:18:"doc/hook/hooks.ods";s:4:"3d0b";s:35:"doc/powermail_graphics/db_icons.psd";s:4:"442c";s:35:"doc/powermail_graphics/ext_icon.gif";s:4:"4fcc";s:51:"doc/powermail_graphics/icon_tx_powermail_fields.gif";s:4:"9a15";s:54:"doc/powermail_graphics/icon_tx_powermail_fields__h.gif";s:4:"e819";s:55:"doc/powermail_graphics/icon_tx_powermail_fields__ht.gif";s:4:"3c06";s:54:"doc/powermail_graphics/icon_tx_powermail_fields__t.gif";s:4:"976c";s:54:"doc/powermail_graphics/icon_tx_powermail_fieldsets.gif";s:4:"35ac";s:57:"doc/powermail_graphics/icon_tx_powermail_fieldsets__h.gif";s:4:"c8e0";s:58:"doc/powermail_graphics/icon_tx_powermail_fieldsets__ht.gif";s:4:"4f86";s:57:"doc/powermail_graphics/icon_tx_powermail_fieldsets__t.gif";s:4:"14bb";s:50:"doc/powermail_graphics/icon_tx_powermail_forms.gif";s:4:"80fe";s:53:"doc/powermail_graphics/icon_tx_powermail_forms__h.gif";s:4:"bcd5";s:54:"doc/powermail_graphics/icon_tx_powermail_forms__ht.gif";s:4:"f7e7";s:53:"doc/powermail_graphics/icon_tx_powermail_forms__t.gif";s:4:"4893";s:50:"doc/powermail_graphics/icon_tx_powermail_mails.gif";s:4:"fcba";s:53:"doc/powermail_graphics/icon_tx_powermail_mails__h.gif";s:4:"d40c";s:37:"doc/powermail_graphics/moduleicon.gif";s:4:"93ca";s:34:"doc/powermail_graphics/pm_logo.gif";s:4:"02dd";s:34:"doc/powermail_graphics/pm_logo.psd";s:4:"dabe";s:35:"doc/realurl/example_realurlpart.php";s:4:"37d3";s:39:"lib/class.tx_powermail_countryzones.php";s:4:"8900";s:29:"lib/class.tx_powermail_db.php";s:4:"570c";s:41:"lib/class.tx_powermail_dynamicmarkers.php";s:4:"c089";s:40:"lib/class.tx_powermail_functions_div.php";s:4:"ecb5";s:32:"lib/class.tx_powermail_geoip.php";s:4:"8851";s:34:"lib/class.tx_powermail_markers.php";s:4:"d405";s:36:"lib/class.tx_powermail_removexss.php";s:4:"2780";s:35:"lib/class.tx_powermail_sessions.php";s:4:"88d6";s:49:"lib/class.user_powermail_tx_powermail_example.php";s:4:"d39f";s:57:"lib/class.user_powermail_tx_powermail_fields_fe_field.php";s:4:"a571";s:53:"lib/class.user_powermail_tx_powermail_fields_type.php";s:4:"9aee";s:56:"lib/class.user_powermail_tx_powermail_fieldsetchoose.php";s:4:"8017";s:55:"lib/class.user_powermail_tx_powermail_forms_preview.php";s:4:"0db1";s:56:"lib/class.user_powermail_tx_powermail_forms_recip_id.php";s:4:"f2b9";s:59:"lib/class.user_powermail_tx_powermail_forms_recip_table.php";s:4:"c571";s:60:"lib/class.user_powermail_tx_powermail_forms_sender_field.php";s:4:"21de";s:45:"lib/class.user_powermail_tx_powermail_uid.php";s:4:"236a";s:27:"lib/user_powermail_misc.php";s:4:"dc24";s:34:"lib/user_powermail_updateError.php";s:4:"688a";s:35:"lib/user_powermailCheckT3jquery.php";s:4:"f6a8";s:42:"lib/user_powermailCheckT3jqueryCDNMode.php";s:4:"e8db";s:35:"lib/user_powermailOnCurrentPage.php";s:4:"9084";s:28:"lib/def/def_field_button.xml";s:4:"ef8c";s:29:"lib/def/def_field_captcha.xml";s:4:"4fe1";s:27:"lib/def/def_field_check.xml";s:4:"ab50";s:29:"lib/def/def_field_content.xml";s:4:"e76e";s:35:"lib/def/def_field_countryselect.xml";s:4:"f5eb";s:41:"lib/def/def_field_countryselect_error.xml";s:4:"80f5";s:26:"lib/def/def_field_date.xml";s:4:"c218";s:43:"lib/def/def_field_date2calversion_error.xml";s:4:"99a6";s:32:"lib/def/def_field_date_error.xml";s:4:"753f";s:30:"lib/def/def_field_datetime.xml";s:4:"a296";s:27:"lib/def/def_field_error.xml";s:4:"0f3d";s:26:"lib/def/def_field_file.xml";s:4:"383c";s:28:"lib/def/def_field_hidden.xml";s:4:"6b31";s:26:"lib/def/def_field_html.xml";s:4:"943d";s:27:"lib/def/def_field_label.xml";s:4:"c62e";s:30:"lib/def/def_field_password.xml";s:4:"1aea";s:27:"lib/def/def_field_radio.xml";s:4:"0537";s:27:"lib/def/def_field_reset.xml";s:4:"21f7";s:28:"lib/def/def_field_select.xml";s:4:"353e";s:28:"lib/def/def_field_submit.xml";s:4:"405b";s:35:"lib/def/def_field_submitgraphic.xml";s:4:"c989";s:26:"lib/def/def_field_text.xml";s:4:"7f4f";s:30:"lib/def/def_field_textarea.xml";s:4:"6d73";s:26:"lib/def/def_field_time.xml";s:4:"99de";s:32:"lib/def/def_field_typoscript.xml";s:4:"6944";s:35:"lib/example/examplefield_button.gif";s:4:"10e0";s:36:"lib/example/examplefield_captcha.gif";s:4:"6201";s:34:"lib/example/examplefield_check.gif";s:4:"32a9";s:36:"lib/example/examplefield_content.gif";s:4:"8f01";s:42:"lib/example/examplefield_countryselect.gif";s:4:"54d0";s:33:"lib/example/examplefield_date.gif";s:4:"19a8";s:37:"lib/example/examplefield_datetime.gif";s:4:"2fae";s:33:"lib/example/examplefield_file.gif";s:4:"9a1b";s:33:"lib/example/examplefield_html.gif";s:4:"6f6b";s:34:"lib/example/examplefield_label.gif";s:4:"9658";s:37:"lib/example/examplefield_password.gif";s:4:"a16d";s:34:"lib/example/examplefield_radio.gif";s:4:"8abe";s:34:"lib/example/examplefield_reset.gif";s:4:"395c";s:35:"lib/example/examplefield_select.gif";s:4:"fae2";s:35:"lib/example/examplefield_submit.gif";s:4:"522e";s:42:"lib/example/examplefield_submitgraphic.gif";s:4:"d39c";s:33:"lib/example/examplefield_text.gif";s:4:"3279";s:37:"lib/example/examplefield_textarea.gif";s:4:"eecb";s:33:"lib/example/examplefield_time.gif";s:4:"a8b3";s:39:"lib/example/examplefield_typoscript.gif";s:4:"77dd";s:34:"mod1/class.tx_powermail_action.php";s:4:"9161";s:32:"mod1/class.tx_powermail_ajax.php";s:4:"4d51";s:34:"mod1/class.tx_powermail_charts.php";s:4:"1e56";s:34:"mod1/class.tx_powermail_export.php";s:4:"51c2";s:38:"mod1/class.tx_powermail_repository.php";s:4:"cc10";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"a210";s:14:"mod1/index.php";s:4:"5d13";s:18:"mod1/locallang.xml";s:4:"b5a3";s:22:"mod1/locallang_mod.xml";s:4:"9cf7";s:19:"mod1/moduleicon.gif";s:4:"24d3";s:14:"pi1/ce_wiz.gif";s:4:"631a";s:39:"pi1/class.tx_powermail_confirmation.php";s:4:"1d46";s:31:"pi1/class.tx_powermail_form.php";s:4:"c06a";s:31:"pi1/class.tx_powermail_html.php";s:4:"4c13";s:36:"pi1/class.tx_powermail_mandatory.php";s:4:"6ddf";s:30:"pi1/class.tx_powermail_pi1.php";s:4:"3f46";s:38:"pi1/class.tx_powermail_pi1_wizicon.php";s:4:"8312";s:33:"pi1/class.tx_powermail_submit.php";s:4:"28d8";s:17:"pi1/locallang.xml";s:4:"c5fb";s:29:"res/css/powermail_backend.css";s:4:"272c";s:36:"res/css/powermail_frontend_basic.css";s:4:"3597";s:36:"res/css/powermail_frontend_fancy.css";s:4:"cbe9";s:37:"res/css/powermail_frontend_helper.css";s:4:"9bc4";s:41:"res/css/powermail_frontend_multipleJS.css";s:4:"d41d";s:20:"res/img/calendar.png";s:4:"5307";s:15:"res/img/h30.png";s:4:"5af3";s:20:"res/img/icon_csv.gif";s:4:"ddf9";s:20:"res/img/icon_del.gif";s:4:"90c6";s:23:"res/img/icon_deloff.gif";s:4:"bb91";s:22:"res/img/icon_delon.gif";s:4:"f1d2";s:28:"res/img/icon_exclamation.gif";s:4:"9878";s:21:"res/img/icon_info.gif";s:4:"16a6";s:22:"res/img/icon_print.gif";s:4:"99dc";s:29:"res/img/icon_select_chart.gif";s:4:"a4de";s:29:"res/img/icon_select_table.gif";s:4:"b878";s:22:"res/img/icon_table.gif";s:4:"cb96";s:36:"res/img/icon_tx_powermail_fields.gif";s:4:"9a15";s:39:"res/img/icon_tx_powermail_fields__h.gif";s:4:"07b3";s:40:"res/img/icon_tx_powermail_fields__ht.gif";s:4:"3c06";s:39:"res/img/icon_tx_powermail_fields__t.gif";s:4:"976c";s:39:"res/img/icon_tx_powermail_fieldsets.gif";s:4:"35ac";s:42:"res/img/icon_tx_powermail_fieldsets__h.gif";s:4:"ebeb";s:43:"res/img/icon_tx_powermail_fieldsets__ht.gif";s:4:"4f86";s:42:"res/img/icon_tx_powermail_fieldsets__t.gif";s:4:"14bb";s:35:"res/img/icon_tx_powermail_forms.gif";s:4:"80fe";s:38:"res/img/icon_tx_powermail_forms__h.gif";s:4:"b151";s:39:"res/img/icon_tx_powermail_forms__ht.gif";s:4:"f7e7";s:38:"res/img/icon_tx_powermail_forms__t.gif";s:4:"4893";s:35:"res/img/icon_tx_powermail_mails.gif";s:4:"fcba";s:38:"res/img/icon_tx_powermail_mails__h.gif";s:4:"2f4b";s:38:"res/img/icon_tx_powermail_mails__t.gif";s:4:"2f4b";s:20:"res/img/icon_xls.gif";s:4:"f031";s:19:"res/img/loading.gif";s:4:"afe8";s:16:"res/img/next.gif";s:4:"d1d0";s:16:"res/img/next.png";s:4:"294d";s:16:"res/img/prev.gif";s:4:"b749";s:16:"res/img/prev.png";s:4:"305a";s:30:"res/js/Ext.grid.RowExpander.js";s:4:"77f8";s:30:"res/js/Ext.ux.form.DateTime.js";s:4:"c902";s:35:"res/js/Ext.ux.plugin.FitToParent.js";s:4:"bbd3";s:44:"res/js/Ext.ux.plugin.PagingToolbarResizer.js";s:4:"1af6";s:27:"res/js/powermail_backend.js";s:4:"b5b3";s:26:"static/css_basic/setup.txt";s:4:"cdec";s:26:"static/css_fancy/setup.txt";s:4:"69d4";s:27:"static/css_helper/setup.txt";s:4:"6a29";s:24:"static/pi1/constants.txt";s:4:"1eb5";s:20:"static/pi1/setup.txt";s:4:"594c";s:23:"templates/tmpl_all.html";s:4:"2b61";s:32:"templates/tmpl_confirmation.html";s:4:"1d00";s:26:"templates/tmpl_emails.html";s:4:"b3cb";s:29:"templates/tmpl_fieldwrap.html";s:4:"5d24";s:28:"templates/tmpl_formwrap.html";s:4:"6a21";s:26:"templates/tmpl_frontend.js";s:4:"e086";s:29:"templates/tmpl_mandatory.html";s:4:"8b61";s:30:"templates/tmpl_multiplejs.html";s:4:"a661";s:23:"templates/tmpl_thx.html";s:4:"d07f";}',
+	'_md5_values_when_last_written' => 'a:186:{s:9:"ChangeLog";s:4:"fbb2";s:20:"class.ext_update.php";s:4:"c1f5";s:16:"ext_autoload.php";s:4:"6e2a";s:21:"ext_conf_template.txt";s:4:"be65";s:12:"ext_icon.gif";s:4:"be45";s:17:"ext_localconf.php";s:4:"2fe7";s:14:"ext_tables.php";s:4:"252b";s:14:"ext_tables.sql";s:4:"71b5";s:13:"locallang.xml";s:4:"19d0";s:16:"locallang_db.xml";s:4:"b3c6";s:16:"pageTSconfig.txt";s:4:"8983";s:12:"t3jquery.txt";s:4:"f3b4";s:7:"tca.php";s:4:"808d";s:46:"classes/interfaces/interface.PM_ExportHook.php";s:4:"25c0";s:36:"cli/class.tx_powermail_scheduler.php";s:4:"3db8";s:46:"cli/class.tx_powermail_scheduler_addFields.php";s:4:"9121";s:12:"cli/conf.php";s:4:"e1ca";s:15:"cli/cronjob.php";s:4:"9854";s:14:"doc/manual.sxw";s:4:"867b";s:53:"doc/database_relation/powermail_database_relation.gif";s:4:"20e9";s:19:"doc/hook/hooks.html";s:4:"0b4b";s:18:"doc/hook/hooks.ods";s:4:"3d0b";s:35:"doc/powermail_graphics/db_icons.psd";s:4:"442c";s:35:"doc/powermail_graphics/ext_icon.gif";s:4:"4fcc";s:51:"doc/powermail_graphics/icon_tx_powermail_fields.gif";s:4:"9a15";s:54:"doc/powermail_graphics/icon_tx_powermail_fields__h.gif";s:4:"e819";s:55:"doc/powermail_graphics/icon_tx_powermail_fields__ht.gif";s:4:"3c06";s:54:"doc/powermail_graphics/icon_tx_powermail_fields__t.gif";s:4:"976c";s:54:"doc/powermail_graphics/icon_tx_powermail_fieldsets.gif";s:4:"35ac";s:57:"doc/powermail_graphics/icon_tx_powermail_fieldsets__h.gif";s:4:"c8e0";s:58:"doc/powermail_graphics/icon_tx_powermail_fieldsets__ht.gif";s:4:"4f86";s:57:"doc/powermail_graphics/icon_tx_powermail_fieldsets__t.gif";s:4:"14bb";s:50:"doc/powermail_graphics/icon_tx_powermail_forms.gif";s:4:"80fe";s:53:"doc/powermail_graphics/icon_tx_powermail_forms__h.gif";s:4:"bcd5";s:54:"doc/powermail_graphics/icon_tx_powermail_forms__ht.gif";s:4:"f7e7";s:53:"doc/powermail_graphics/icon_tx_powermail_forms__t.gif";s:4:"4893";s:50:"doc/powermail_graphics/icon_tx_powermail_mails.gif";s:4:"fcba";s:53:"doc/powermail_graphics/icon_tx_powermail_mails__h.gif";s:4:"d40c";s:37:"doc/powermail_graphics/moduleicon.gif";s:4:"93ca";s:34:"doc/powermail_graphics/pm_logo.gif";s:4:"02dd";s:34:"doc/powermail_graphics/pm_logo.psd";s:4:"dabe";s:35:"doc/realurl/example_realurlpart.php";s:4:"37d3";s:39:"lib/class.tx_powermail_countryzones.php";s:4:"8900";s:29:"lib/class.tx_powermail_db.php";s:4:"570c";s:41:"lib/class.tx_powermail_dynamicmarkers.php";s:4:"c089";s:40:"lib/class.tx_powermail_functions_div.php";s:4:"ecb5";s:32:"lib/class.tx_powermail_geoip.php";s:4:"8851";s:34:"lib/class.tx_powermail_markers.php";s:4:"d405";s:36:"lib/class.tx_powermail_removexss.php";s:4:"2780";s:35:"lib/class.tx_powermail_sessions.php";s:4:"88d6";s:49:"lib/class.user_powermail_tx_powermail_example.php";s:4:"d39f";s:57:"lib/class.user_powermail_tx_powermail_fields_fe_field.php";s:4:"a571";s:53:"lib/class.user_powermail_tx_powermail_fields_type.php";s:4:"9aee";s:56:"lib/class.user_powermail_tx_powermail_fieldsetchoose.php";s:4:"8017";s:55:"lib/class.user_powermail_tx_powermail_forms_preview.php";s:4:"0db1";s:56:"lib/class.user_powermail_tx_powermail_forms_recip_id.php";s:4:"f2b9";s:59:"lib/class.user_powermail_tx_powermail_forms_recip_table.php";s:4:"c571";s:60:"lib/class.user_powermail_tx_powermail_forms_sender_field.php";s:4:"21de";s:45:"lib/class.user_powermail_tx_powermail_uid.php";s:4:"236a";s:27:"lib/user_powermail_misc.php";s:4:"dc24";s:34:"lib/user_powermail_updateError.php";s:4:"688a";s:35:"lib/user_powermailCheckT3jquery.php";s:4:"f6a8";s:42:"lib/user_powermailCheckT3jqueryCDNMode.php";s:4:"e8db";s:35:"lib/user_powermailOnCurrentPage.php";s:4:"9084";s:28:"lib/def/def_field_button.xml";s:4:"ef8c";s:29:"lib/def/def_field_captcha.xml";s:4:"4fe1";s:27:"lib/def/def_field_check.xml";s:4:"ab50";s:29:"lib/def/def_field_content.xml";s:4:"e76e";s:35:"lib/def/def_field_countryselect.xml";s:4:"f5eb";s:41:"lib/def/def_field_countryselect_error.xml";s:4:"80f5";s:26:"lib/def/def_field_date.xml";s:4:"c218";s:43:"lib/def/def_field_date2calversion_error.xml";s:4:"99a6";s:32:"lib/def/def_field_date_error.xml";s:4:"753f";s:30:"lib/def/def_field_datetime.xml";s:4:"a296";s:27:"lib/def/def_field_error.xml";s:4:"0f3d";s:26:"lib/def/def_field_file.xml";s:4:"383c";s:28:"lib/def/def_field_hidden.xml";s:4:"6b31";s:26:"lib/def/def_field_html.xml";s:4:"943d";s:27:"lib/def/def_field_label.xml";s:4:"c62e";s:30:"lib/def/def_field_password.xml";s:4:"1aea";s:27:"lib/def/def_field_radio.xml";s:4:"0537";s:27:"lib/def/def_field_reset.xml";s:4:"21f7";s:28:"lib/def/def_field_select.xml";s:4:"353e";s:28:"lib/def/def_field_submit.xml";s:4:"405b";s:35:"lib/def/def_field_submitgraphic.xml";s:4:"c989";s:26:"lib/def/def_field_text.xml";s:4:"7f4f";s:30:"lib/def/def_field_textarea.xml";s:4:"6d73";s:26:"lib/def/def_field_time.xml";s:4:"99de";s:32:"lib/def/def_field_typoscript.xml";s:4:"6944";s:35:"lib/example/examplefield_button.gif";s:4:"10e0";s:36:"lib/example/examplefield_captcha.gif";s:4:"6201";s:34:"lib/example/examplefield_check.gif";s:4:"32a9";s:36:"lib/example/examplefield_content.gif";s:4:"8f01";s:42:"lib/example/examplefield_countryselect.gif";s:4:"54d0";s:33:"lib/example/examplefield_date.gif";s:4:"19a8";s:37:"lib/example/examplefield_datetime.gif";s:4:"2fae";s:33:"lib/example/examplefield_file.gif";s:4:"9a1b";s:33:"lib/example/examplefield_html.gif";s:4:"6f6b";s:34:"lib/example/examplefield_label.gif";s:4:"9658";s:37:"lib/example/examplefield_password.gif";s:4:"a16d";s:34:"lib/example/examplefield_radio.gif";s:4:"8abe";s:34:"lib/example/examplefield_reset.gif";s:4:"395c";s:35:"lib/example/examplefield_select.gif";s:4:"fae2";s:35:"lib/example/examplefield_submit.gif";s:4:"522e";s:42:"lib/example/examplefield_submitgraphic.gif";s:4:"d39c";s:33:"lib/example/examplefield_text.gif";s:4:"3279";s:37:"lib/example/examplefield_textarea.gif";s:4:"eecb";s:33:"lib/example/examplefield_time.gif";s:4:"a8b3";s:39:"lib/example/examplefield_typoscript.gif";s:4:"77dd";s:34:"mod1/class.tx_powermail_action.php";s:4:"9161";s:32:"mod1/class.tx_powermail_ajax.php";s:4:"4d51";s:34:"mod1/class.tx_powermail_charts.php";s:4:"1e56";s:34:"mod1/class.tx_powermail_export.php";s:4:"51c2";s:38:"mod1/class.tx_powermail_repository.php";s:4:"cc10";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"a210";s:14:"mod1/index.php";s:4:"5d13";s:18:"mod1/locallang.xml";s:4:"b5a3";s:22:"mod1/locallang_mod.xml";s:4:"9cf7";s:19:"mod1/moduleicon.gif";s:4:"24d3";s:14:"pi1/ce_wiz.gif";s:4:"631a";s:39:"pi1/class.tx_powermail_confirmation.php";s:4:"1d46";s:31:"pi1/class.tx_powermail_form.php";s:4:"c06a";s:31:"pi1/class.tx_powermail_html.php";s:4:"4c13";s:36:"pi1/class.tx_powermail_mandatory.php";s:4:"6ddf";s:30:"pi1/class.tx_powermail_pi1.php";s:4:"3f46";s:38:"pi1/class.tx_powermail_pi1_wizicon.php";s:4:"8312";s:33:"pi1/class.tx_powermail_submit.php";s:4:"e1fa";s:17:"pi1/locallang.xml";s:4:"c5fb";s:29:"res/css/powermail_backend.css";s:4:"272c";s:36:"res/css/powermail_frontend_basic.css";s:4:"3597";s:36:"res/css/powermail_frontend_fancy.css";s:4:"cbe9";s:37:"res/css/powermail_frontend_helper.css";s:4:"9bc4";s:41:"res/css/powermail_frontend_multipleJS.css";s:4:"d41d";s:20:"res/img/calendar.png";s:4:"5307";s:15:"res/img/h30.png";s:4:"5af3";s:20:"res/img/icon_csv.gif";s:4:"ddf9";s:20:"res/img/icon_del.gif";s:4:"90c6";s:23:"res/img/icon_deloff.gif";s:4:"bb91";s:22:"res/img/icon_delon.gif";s:4:"f1d2";s:28:"res/img/icon_exclamation.gif";s:4:"9878";s:21:"res/img/icon_info.gif";s:4:"16a6";s:22:"res/img/icon_print.gif";s:4:"99dc";s:29:"res/img/icon_select_chart.gif";s:4:"a4de";s:29:"res/img/icon_select_table.gif";s:4:"b878";s:22:"res/img/icon_table.gif";s:4:"cb96";s:36:"res/img/icon_tx_powermail_fields.gif";s:4:"9a15";s:39:"res/img/icon_tx_powermail_fields__h.gif";s:4:"07b3";s:40:"res/img/icon_tx_powermail_fields__ht.gif";s:4:"3c06";s:39:"res/img/icon_tx_powermail_fields__t.gif";s:4:"976c";s:39:"res/img/icon_tx_powermail_fieldsets.gif";s:4:"35ac";s:42:"res/img/icon_tx_powermail_fieldsets__h.gif";s:4:"ebeb";s:43:"res/img/icon_tx_powermail_fieldsets__ht.gif";s:4:"4f86";s:42:"res/img/icon_tx_powermail_fieldsets__t.gif";s:4:"14bb";s:35:"res/img/icon_tx_powermail_forms.gif";s:4:"80fe";s:38:"res/img/icon_tx_powermail_forms__h.gif";s:4:"b151";s:39:"res/img/icon_tx_powermail_forms__ht.gif";s:4:"f7e7";s:38:"res/img/icon_tx_powermail_forms__t.gif";s:4:"4893";s:35:"res/img/icon_tx_powermail_mails.gif";s:4:"fcba";s:38:"res/img/icon_tx_powermail_mails__h.gif";s:4:"2f4b";s:38:"res/img/icon_tx_powermail_mails__t.gif";s:4:"2f4b";s:20:"res/img/icon_xls.gif";s:4:"f031";s:19:"res/img/loading.gif";s:4:"afe8";s:16:"res/img/next.gif";s:4:"d1d0";s:16:"res/img/next.png";s:4:"294d";s:16:"res/img/prev.gif";s:4:"b749";s:16:"res/img/prev.png";s:4:"305a";s:30:"res/js/Ext.grid.RowExpander.js";s:4:"77f8";s:30:"res/js/Ext.ux.form.DateTime.js";s:4:"c902";s:35:"res/js/Ext.ux.plugin.FitToParent.js";s:4:"bbd3";s:44:"res/js/Ext.ux.plugin.PagingToolbarResizer.js";s:4:"1af6";s:27:"res/js/powermail_backend.js";s:4:"b5b3";s:26:"static/css_basic/setup.txt";s:4:"cdec";s:26:"static/css_fancy/setup.txt";s:4:"69d4";s:27:"static/css_helper/setup.txt";s:4:"6a29";s:24:"static/pi1/constants.txt";s:4:"1eb5";s:20:"static/pi1/setup.txt";s:4:"1c35";s:23:"templates/tmpl_all.html";s:4:"2b61";s:32:"templates/tmpl_confirmation.html";s:4:"1d00";s:26:"templates/tmpl_emails.html";s:4:"b3cb";s:29:"templates/tmpl_fieldwrap.html";s:4:"5d24";s:28:"templates/tmpl_formwrap.html";s:4:"6a21";s:26:"templates/tmpl_frontend.js";s:4:"e086";s:29:"templates/tmpl_mandatory.html";s:4:"8b61";s:30:"templates/tmpl_multiplejs.html";s:4:"a661";s:23:"templates/tmpl_thx.html";s:4:"d07f";}',
 	'suggests' => array(
 	),
 );
